--- a/README.Rmd
+++ b/README.Rmd
@@ -13,7 +13,49 @@ knitr::opts_chunk$set(
 )
 ```
 
+# finstr
 
+The purpose of **finstr** package is to create an environment for 
+reproducible financial statement analysis. 
+The package will not cover specific types of 
+analysis (except in examples and package vignettes) but will provide
+a domain language to write them. 
+With other functions in basic R and existing R packages users 
+could store, share, reuse and reproduce the results of their analitic work.
+
+For now it is offering:
+
+**1. Data structure for financial statements**
+
+  - Reading from data frames parsed with XBRL package
+  - Structure in tidy format
+  - Encapsulating calculation hierarchy of variables
+  - Default printing in transposed format and with visible hierarchy
+
+**2. Validation of statement calculation**
+
+  - Validation of calcuation hierarchy
+  - Calculation of higher order elements
+  
+**3. Merge statements** 
+
+  - Merge different periods of equal statement type
+  - Merge statements of a different type 
+  
+**4. Calculate and reveal**
+
+  - Custom financial ratio calculations definitions 
+  - Exposing data by rearranging the calculation hierarchy
+  - Time lagged difference
+
+
+
+## Install finstr
+To install finstr from github use install_github from devtools package: 
+```{r, eval=FALSE}
+library(devtools)
+install_github("bergant/finstr")
+```
 
 ```{r, echo=FALSE, results='hide', message=FALSE }
 library(dplyr)
@@ -23,29 +65,6 @@ data(xbrl_data_aapl2013)
 data(xbrl_data_aapl2014)
 ```
 
-**Warning: finstr package is in development. 
-Please use with caution.**
-
-The purpose of finstr package is to use financial statements 
-data in more structured form and process.
-For now it is offering:
-
-1. Data structure for financial statements in tidy and usable format
-2. Validation of statement calculation
-3. Function to merge two reporting periods into single object
-4. Calculations on statements data and lagged difference calculation
-
-The idea in long term is to create an environment for reproducible financial 
-statement analysis. With existing packages like XBRL for XBRL parsing, 
-dplyr for data manipulation and knitr for reproducible research, this 
-shouldn't be a long journey.
-
-## Install finstr
-To install finstr from github use install_github from devtools package: 
-```{r, eval=FALSE}
-library(devtools)
-install_github("bergant/finstr")
-```
 
 ## Get data
 Use XBRL package to parse XBRL files. For example:
@@ -72,8 +91,8 @@ st2014
 
 Statements object is a list of 
 several statement objects (ballance sheets, income and cash 
-flow statements) which are data frames with elements as columns and periods
-as rows. 
+flow statements).
+
 To get a single *statement* use *statements* object as a regular R list:
 ```{r statement}
 balance_sheet2013 <- st2013$StatementOfFinancialPositionClassified
@@ -85,17 +104,6 @@ tail(income2014, 2)
 ```
 
 
-Information about hierarchical structure of elements (concepts) is stored 
-as an attribute to the statement object.
-
-To get more data about the concepts used in the statement call `get_elements`: 
-```{r relations}
-bs_els <- get_elements(balance_sheet2014)
-```
-
-Elements store concept descriptions, balance attribute (debit/credit) and 
-parent/child relationships between concepts.
-
 ## Validate statement calculation hierarchy
 Recalculate higher order concepts from basic values and check for errors.
 
@@ -104,21 +112,25 @@ check <- check_statement(balance_sheet2014)
 check
 ```
 
-Validation returns all calculation results in a data frame:
-
-```{r check_results check}
-
-df1 <- aggregate(cbind(calculated, error) ~ elementId + date, data = check, sum) 
-split(df1, df1$date)
+In case of error the numbers with errors will be presented along with elements:
+```{r check_error}
+check_statement(
+  within(balance_sheet2014, InventoryNet <- InventoryNet * 2)
+)
   
 ```
 
-... and expressions used to calculate values:
-```{r check_expression check}
 
-check <- check_statement(income2014)
-with( check, expression[elementId == "OperatingIncomeLoss" & date == "2014-09-27"]) 
+Validation returns all calculation results in a readable data frame.
+Lets check only operating income from income statement:
 
+```{r check_results check}
+check <- check_statement(income2014, element_id = "OperatingIncomeLoss")
+check
+check$expression[1]
+check$original / 10^6
+check$calculated / 10^6
+check$error
 ```
 
 
@@ -130,10 +142,10 @@ balance_sheet <- merge( balance_sheet2013, balance_sheet2014 )
 ```
 
 The structure of merged balance sheets may differ if XBRL
-taxonomy changed. 
+taxonomy changes. 
 Function `merge` takes care of it by expanding the elements 
 hierarchy to fit both statements. 
-The values of any missing elements is set to 0.
+The values of any missing elements in different periods is set to 0.
 
 To merge all statements from *statements* object use merge on statements objects:
 ```{r merge_statements}
@@ -144,9 +156,22 @@ balance_sheet <- st_all$StatementOfFinancialPositionClassified
 balance_sheet$endDate
 ```
 
-## Calculate new values and ratios
-Statement object (in our case `balance_sheet`) is also a data frame object.
-With elements (or concepts) as columns and time periods as rows.
+## Merge different types of statements
+If there are no matching elements between the two statements 
+`merge` joins statements by matching their periods.
+For some financial ratio calculations the combined statement may be  
+a better starting point.
+
+```{r merge_types, eval=FALSE}
+  merge.statement(
+    st_all$StatementOfFinancialPositionClassified, 
+    st_all$StatementOfIncome )
+```
+
+
+## Calculate financial ratios
+Statement object (in our case `balance_sheet`) is also a data frame object
+with statement elements as columns and time periods as rows.
 It is possible then to use statement as a data frame.
 
 Lets calculate current ratio which is defined by
@@ -233,6 +258,65 @@ income2014 %>% do_calculation(profit_margins)
 
 ```
 
+## Rearranging statement hierarchy
+Calculations gives us freedom to use any formula with any data from 
+financial statements.
+Most of the time this is not necessary as we can get usefull information just by
+regrouping calculation hierarchy.
+
+There are many additional reasons why is rearranging statements useful step before
+actual calculations:
+
+   * We can avoid errors in formulas with many variables
+   * Accounting taxonomies do change and using many formulas on original statement is
+   harder to support than using custom hierarchy for analysis starting point
+   * When sharing analysis it is much easier to print 6 values instead of 30
+      
+To rearrange the statement to simple 2-level hierarchy use `expose` function.
+
+```{r expose_graph}
+expose( balance_sheet,
+  
+  # Assets
+  `Current Assets` = "AssetsCurrent",
+  `Noncurrent Assets` = other("Assets"),
+
+  # Liabilites and equity
+  `Current Liabilities` = "LiabilitiesCurrent",
+  `Noncurrent Liabilities` = other(c("Liabilities", "CommitmentsAndContingencies")),
+  `Stockholders Equity` = "StockholdersEquity"
+)
+
+```
+
+Balance sheet stays divided by *Assets* and *Liabilities and Equity*.
+For the second level we are exposing current assets from noncurrent and 
+similar is done for the liabilities. We choose to separate equity.
+
+Function `expose` expects a list of vectors with element names.
+Function `other` helps us identify elements without enumerating every single element.
+Using `other` reduces a lot of potential errors as the function "knows" which
+elements are not specified and keeps the balance sheet complete.
+
+
+Sometimes it is easier to define a complement than a list of elements.
+In this case we can use the `%without%` operator. Let say we
+want to expose first tangible and then intangible assets:
+
+```{r expose_without}
+expose( balance_sheet,
+  
+  # Assets
+  `Tangible Assets` = 
+    "Assets" %without% c("Goodwill", "IntangibleAssetsNetExcludingGoodwill"),
+  `Intangible Assets` = other("Assets"),
+
+  # Liabilites and equity
+  `Liabilities` = c("Liabilities", "CommitmentsAndContingencies"),
+  `Stockholders Equity` = "StockholdersEquity"
+)
+
+```
 
 ##Lagged difference
 To calculate lagged difference for entire statement use `diff` function.
@@ -240,14 +324,14 @@ The result is statement of changes between successive years:
 
 ```{r diff}
 
-balance_sheet %>% diff()
+diff(balance_sheet)
 
 ```
 
 # Balance sheet visualization
 
 ## Prepare custom hierarchy
-The only way to visualize a balance sheet is by exposing limited number a few values. 
+The only way to visualize a balance sheet is by exposing a limited number of values. 
 The first step is then to aggregate a balance sheet to a small number of pieces.
 We can use `expose` to specify these groups of elements. For example:
 
@@ -265,24 +349,11 @@ bs_simple <- expose( balance_sheet,
 
 ```
 
-Balance sheet stays divided by **Assets** and **Liabilities and Equity**.
-We only defined simplified hierarchy for the second level.
 
-Function `expose` expects a list of vectors with element names.
-Function `other` helps us identify elements without enumerating every single element.
+## Double stacked graph
+Using ggplot2 package we can plot a simplified balance sheet:
 
-The result of `expose` is a valid statement object:
-```{r simple_bs}
-# print simplified balance sheet
-bs_simple
-# check if valid
-check_statement(bs_simple)
-
-```
-
-
-
-```{r graph1, fig.width=7.2}
+```{r graph_byside, fig.width=7.0}
 library(ggplot2)
 
 plot_double_stacked_bar(bs_simple)
@@ -291,8 +362,17 @@ plot_double_stacked_bar(bs_simple)
 
 Another option is to group by faceting balance sheet side instead of date:
 
-```{r graph2, fig.width=7.2}
+```{r graph_bydate, fig.width=7.0}
 
 plot_double_stacked_bar(bs_simple, by_date = FALSE)
+
+```
+
+Using **proportional** form we reveal the changes in balance sheet structure:
+
+```{r graph_prop, fig.width=7.0}
+
+bs_simple_prop <- proportional(bs_simple)
+plot_double_stacked_bar(bs_simple_prop)
 
 ```
