--- a/README.Rmd
+++ b/README.Rmd
@@ -28,7 +28,7 @@ For now it is offering:
 **1. Data structure for financial statements**
 
   - Reading from data frames parsed with XBRL package
-  - Structure in tidy format
+  - Statements in tidy format with accounting taxonomy concepts as columns
   - Encapsulating calculation hierarchy of variables
   - Default printing in transposed format and with visible hierarchy
 
@@ -261,7 +261,7 @@ income2014 %>% do_calculation(profit_margins)
 ## Rearranging statement hierarchy
 Calculations gives us freedom to use any formula with any data from 
 financial statements.
-Most of the time this is not necessary as we can get usefull information just by
+Most of the time this is not necessary as we can get useful information just by
 regrouping calculation hierarchy.
 
 There are many additional reasons why is rearranging statements useful step before
@@ -274,7 +274,7 @@ actual calculations:
       
 To rearrange the statement to simple 2-level hierarchy use `expose` function.
 
-```{r expose_graph}
+```{r expose}
 expose( balance_sheet,
   
   # Assets
@@ -290,8 +290,8 @@ expose( balance_sheet,
 ```
 
 Balance sheet stays divided by *Assets* and *Liabilities and Equity*.
-For the second level we are exposing current assets from noncurrent and 
-similar is done for the liabilities. We choose to separate equity.
+For the second level we are exposing *current assets* from *noncurrent* and 
+similar is done for the *liabilities*. We choose to separate *equity*.
 
 Function `expose` expects a list of vectors with element names.
 Function `other` helps us identify elements without enumerating every single element.
@@ -300,8 +300,8 @@ elements are not specified and keeps the balance sheet complete.
 
 
 Sometimes it is easier to define a complement than a list of elements.
-In this case we can use the `%without%` operator. Let say we
-want to expose first tangible and then intangible assets:
+In this case we can use the `%without%` operator. Lets expose for example
+*tangible* and then *intangible* assets:
 
 ```{r expose_without}
 expose( balance_sheet,
@@ -328,6 +328,7 @@ diff(balance_sheet)
 
 ```
 
+
 # Balance sheet visualization
 
 ## Prepare custom hierarchy
@@ -335,7 +336,7 @@ The only way to visualize a balance sheet is by exposing a limited number of val
 The first step is then to aggregate a balance sheet to a small number of pieces.
 We can use `expose` to specify these groups of elements. For example:
 
-```{r expose}
+```{r expose_graph}
 bs_simple <- expose( balance_sheet,
   
   # Assets
