--- a/README.Rmd
+++ b/README.Rmd
@@ -15,6 +15,7 @@ knitr::opts_chunk$set(
 
 # finstr
 
+
 The purpose of **finstr** package is to create an environment for 
 reproducible financial statement analysis. 
 The package will not cover specific types of 
@@ -128,9 +129,8 @@ Lets check only operating income from income statement:
 check <- check_statement(income2014, element_id = "OperatingIncomeLoss")
 check
 check$expression[1]
-check$original / 10^6
 check$calculated / 10^6
-check$error
+
 ```
 
 
@@ -178,20 +178,23 @@ Lets calculate current ratio which is defined by
 
 $$ Current Ratio = \frac{Current Assets}{Current Liabilities} $$
 
+With dplyr package we can use `mutate`, `select` or `transmute` functions:
+
 ```{r dplyr}
 library(dplyr)
 
-balance_sheet %>%
-  mutate(CurrentRatio = AssetsCurrent / LiabilitiesCurrent) %>%
-  select(endDate, CurrentRatio)
+balance_sheet %>% transmute(
+  date = endDate, 
+  CurrentRatio = AssetsCurrent / LiabilitiesCurrent
+)
 
 ```
 
-By using `calculate` function we can achieve the same result with
-less verbose language. Lets calculate now two ratios:
+By using `finstr::calculate` function we can achieve the same result but
+don't have to handle the date field and there is a rounding parameter. 
+Lets calculate for example two ratios:
 
 ```{r calculate}
-library(dplyr)
 
 balance_sheet %>% calculate( digits = 2,
   
@@ -221,11 +224,11 @@ with joining two data frames:
 
 ```{r DaysSalesOutstanding}
 
-balance_sheet %>%
-  merge( st_all$StatementOfIncome ) %>%
-  calculate( digits = 2,
+merge(balance_sheet, st_all$StatementOfIncome ) %>% calculate( digits = 2,
+                                                               
     .AccountReceivableLast = lag(AccountsReceivableNetCurrent),
     .AccountReceivableAvg = (.AccountReceivableLast + AccountsReceivableNetCurrent)/2,
+    
     DaysSalesOutstanding = .AccountReceivableAvg / SalesRevenueNet * 365 
   )
 
@@ -236,10 +239,12 @@ only DaysSalesOutstanding is selected in final result. Use `digits` parameter to
 
 ## Reusing calculations
 When running same calculation for different statements, define the
-calculation with `calculation` and run with `do_calculation`:
+calculation with `calculation` and call `calculate` with argument
+`calculations`:
+
 ```{r calculation}
 # define calculation
-profit_margins <- calculation( digits = 2,
+profit_margins <- calculation(
   
   Gross_Margin = 
     (SalesRevenueNet -  CostOfGoodsAndServicesSold) / SalesRevenueNet,
@@ -253,8 +258,8 @@ profit_margins <- calculation( digits = 2,
 )
 
 # run profit margins for two different statements
-income2013 %>% do_calculation(profit_margins)
-income2014 %>% do_calculation(profit_margins)
+income2013 %>% calculate(calculations = profit_margins, digits = 2)
+income2014 %>% calculate(calculations = profit_margins, digits = 2)
 
 ```
 
